hphp/hack/test/typecheck/namespace_global_builtin2.php.like_types.exp
File "namespace_global_builtin2.php", line 10, characters 23-35:
Invalid argument (Typing[4110])
File "printf.hhi", line 133, characters 30-56:
Expected ~HH\FormatString<~PlainSprintf> because it is an unenforceable type
File "namespace_global_builtin2.php", line 10, characters 23-35:
But got string
